tyding up, adding components and running prettier on proj

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,1 @@
-
-<form>
-  <input id="messageInput" type="text" placeholder="Your message" />
-  <button>Send</button>
-</form>
-<ul></ul>
-<p id="activity"></p>
-<router-outlet />
+<app-chat-component></app-chat-component>
